<resources>
    <string name="app_name">TicTacToe</string>
    <string name="playAgain">Play Again !</string>
    <string name="tryAgain">Try Again !</string>
    <string name="winnerIs">The Winner is: </string>
    <string name="startGameSingle">Lets start on this device</string>
    <string name="startGameDual">Lets start Dual Player mode</string>
    <string name="Welcome">Welcome to TicTacToe </string>
    <string name="BluetoothOn">Enable Bluetooth</string>
    <string name="BluetoothOff">Disable Bluetooth </string>
    <string name="BluetoothText">Dual Player Mode</string>
    <string name="DualPlayer">Lets start on two devices</string>
    <string name="showList">show Devices</string>
    <string name="listen">listen</string>
    <string name="showLast">Show Last Game State</string>
    <string name="about">About</string>
    <string name="Instruction">Instruction</string>
    <string name="AboutText">Test About</string>
    <string name="InstructionText">Test Instruction</string>
</resources>
